feat: インスペクション